# prestecs-satirs

./: .dockerignore  .env.production  .gitignore  Caddyfile  Caddyfile.dev  Caddyfile.e2e  DONE.md  Dockerfile  README.md  TESTING_CHECKLIST.md  TESTING_PARAMETERS.md  TESTING_STATUS.md  TODO.md  build.sh  dev.sh  docker-compose.yml  opencode.json  pyproject.toml  render.yaml
.agents/agents/: backend-developer.md  code-reviewer.md  frontend-developer.md
.claude/: CLAUDE.md  settings.json  settings.local.json.template
.claude/agents/: database-manager.md  project-manager.md
.claude/commands/opsx/: apply.md  archive.md  explore.md  propose.md
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.claude/skills/playwright-cli/: SKILL.md
.claude/skills/task-management/: SKILL.md
.github/workflows/: ci.yml  content-sync.yml  deploy.yml
backend/: config.py
backend/api/: app.py  auth.py  dependencies.py
backend/api/routes/: admin.py  auth_routes.py  content.py  games.py  loans.py  members.py
backend/cli/: main.py
backend/data/: bgg_client.py  database.py  email_client.py
backend/data/repositories/: sqlite_game_repository.py  sqlite_loan_repository.py  sqlite_member_repository.py  sqlite_password_token_repository.py
backend/domain/: slug.py
backend/domain/entities/: game.py  loan.py  member.py  password_token.py
backend/domain/repositories/: game_repository.py  loan_repository.py  member_repository.py  password_token_repository.py
backend/migrations/: 001_initial.sql  002_add_is_active.sql  003_add_game_details.sql  004_add_game_slug.sql  004_add_image_url.sql  runner.py
data/: bgg_collection.json
deploy/: RESEND_SETUP.md  deploy.sh  setup-server.sh
deploy/wip/: index.html
docs/: generate_diagrams.py  technical-overview-for-ariadna.md  technical-overview-for-arianna.md  technical-overview.md
docs/diagrams/: 01-server-architecture.excalidraw  02-data-flow.excalidraw  03-login-flow.excalidraw  04-database.excalidraw  05-deployment.excalidraw  06-docker-explained.excalidraw  07-agentic-workflow.excalidraw  08-password-setup.excalidraw  09-website-integration.excalidraw
e2e/: README.md  playwright.config.ts
e2e/scripts/: seed-auth-states.ts
e2e/tests/: site-shell.spec.ts  url-redirects.spec.ts  visual.spec.ts
frontend/: index.html  package-lock.json  package.json  vite.config.site-shell.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx  reset.css  site-shell-embed.tsx  tokens.css
frontend/tests/: setup.ts
openspec/: config.yaml
scraper/: README.md  __init__.py  __main__.py  asset_fetcher.py  cli.py  config.py  enumerator.py  events.py  fetcher.py  linker.py  manifest.py  nav_extractor.py  orchestrator.py  shell_injector.py  stripper.py  template.py  writer.py
scraper/template/: content.css
scripts/: dev_mirror.py  scrape_game_details.py  seed_test_users.py
tasks/: future-ideas.md  prd-prestecs-satirs.md  prd-refugio-del-satiro.md
tasks/lending-redesign/: README.md  current-state.md  decisions.md  plan-lending-redesign.md  plan-replicate-existing-site.md  style-guide.md
tests/: conftest.py
tests/api/: test_auth_routes.py  test_forgot_password.py  test_games.py
tests/cli/: test_import_members.py
tests/data/: test_bgg_client.py
tests/domain/: test_slug.py
tests/migrations/: test_runner.py
tests/scraper/: test_nav_extractor.py  test_orchestrator.py  test_shell_injector.py  test_writer.py
tests/scripts/: test_dev_mirror.py
(+178 files in other folders)
