[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refugio-del-satiro"
version = "0.1.0"
description = "Refugio del Sátiro association website (includes game lending)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
refugio = "backend.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["backend", "scraper"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
# Scraper modules use imports at runtime (isinstance checks, Path as parameter
# types) and pre-date the TCH rule enforcement. Suppress until a dedicated
# refactor pass adds proper TYPE_CHECKING guards across the whole module.
"scraper/*.py" = ["TCH001", "TCH002", "TCH003"]
# Test files always need runtime imports for fixtures, pytest marks, and
# isinstance checks — TYPE_CHECKING guards would break them.
"tests/**/*.py" = ["TCH001", "TCH002", "TCH003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
